--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,14 +9,24 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/logo192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "logo/png"
+      "type": "image/png"
     },
     {
-      "src": "/logo512.png",
+      "src": "/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "logo/png"
+      "type": "image/png"
     }
   ]
 }
